src/objects/PSA_Project_Creation_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings used in auto project creation logic</description>
    <fields>
        <fullName>CLD_Standard_Template__c</fullName>
        <label>CLD Standard Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLD_UPD_Standard_Template__c</fullName>
        <label>CLD UPD Standard Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Days_for_SE_Project_Close__c</fullName>
        <label>Number Days for SE Project Close</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Name_Pattern__c</fullName>
        <description>Used for project naming convention. Enter field names followed by the number of characters. All sections need to be separated by a &apos;;&apos;. Enter any default text enclosed in &apos;[ ]&apos; followed by a &apos;;&apos;. Ensure no spaces. System will add separators &apos; - &apos;. Example: Account.Name,10; Opportunity.Name,10;[Q];Opportunity.Quote_ID__c,10;[Project]</description>
        <inlineHelpText>Enter field names followed by the number of characters. All sections need to be separated by a &apos;;&apos;. Enter any default text enclosed in &apos;[ ]&apos;. Ensure no spaces. Example: Account.Name,10;Opportunity.Name,10;[Q];Opportunity.Quote_ID__c,10;[Project];</inlineHelpText>
        <label>Project Name Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Request_Stage__c</fullName>
        <description>Stage at which resource requests will be auto-generated. Include all stages comma separated.</description>
        <inlineHelpText>Stage at which resource requests will be auto-generated. Include all stages comma separated.</inlineHelpText>
        <label>Resource Request Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SE_Standard_Template__c</fullName>
        <description>Id of the SE Project template to be used during auto-creation of SE projects</description>
        <inlineHelpText>Id of the SE Project template to be used during auto-creation of SE projects</inlineHelpText>
        <label>SE Standard Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Template__c</fullName>
        <description>Id of the standard template project to be applied when projects are created</description>
        <inlineHelpText>Id of the standard template project to be applied when projects are created</inlineHelpText>
        <label>Standard Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>PSA Project Creation Settings</label>
</CustomObject>